# layout-uploader

./: WARP.md  generateicons.sh  package.json  pnpm-lock.yaml  release.sh
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
