[package]
name = "layout-uploader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "layout_uploader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.7.0", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-http = "2.0.0"
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", features = ["jpeg", "png"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
uuid = { version = "1.0", features = ["v4"] }
rfd = "0.14.0"
